SELC-4720 fix: added originId for coverage